test/errors/008_op_spacing.eu
# -*- mode: conf -*-

z: 1 +1
